
- QuickNotepad plugin didn't compile.

- jEdit didn't compile with jikes due to overly pedantic inner class
  semantics.

- Pressing "Reload" after "Select All" in the files changed dialog
  didn't work (Nicholas O'Leary).

- Fix a problem where sometimes after loading, only the first line of a
  file would be visible.

- PropertyManager.getProperties() did not include site properties.

}}}
{{{ API Changes

- A few methods added to JEditTextArea for Gestures plugin:

  isRightClickPopupEnabled()
  setRightClickPopupEnabled(boolean)
  handlePopupTrigger(MouseEvent)

}}}

}}}

{{{ Version 4.2pre12

Thanks to Lionel Fiol, Nicholas O'Leary, Ollie Rutherfurd and
Thomas Alspaugh for contributing to this release.

{{{ Miscellaneous Changes

- The Buffer Options and Global Options->Editing panes no longer allow
  setting the wrap mode to 'soft' with a wrap margin of zero. Previously
  this was allowed, but did nothing since the feature was removed in
  4.2.

- DELETE key works with the tall caret now.

- Macros in the user macros directory now override macros in the system
  macro directory.

- Added 'Next Dirty Buffer' and 'Insert Selection' macros
  (Ollie Rutherfurd).

- Pressing A+DOWN in a history text field now shows the field's popup
  menu (Joerg Spieler).

- Added "Mode Switcher" macro (Nicholas O'Leary).

}}}
{{{ Syntax Highlighting

- Updated BibTeX and LaTeX syntax highlighting (Thomas Alspaugh).

- PHP mode now recognizes <script language="PHP">...</script>.

- Updated Omnimark syntax highlighting (Lionel Fiol).

- Added RTF syntax highlighting (Lionel Fiol).

}}}
{{{ Bug Fixes

- Fixed a possible deadlock on startup when loading the SQL plugin. In
  fact this would happen with any plugin that attempted to load icons
  from its class initializer.

- Fixed NullPointerException when unloading a plugin which has at least
  one floating window that is not docked.

- Fixed problems immediately after changing the font size due to a